src/app/globals.css
@import 'tailwindcss';

/* Naming should follow property-entity-attribute */

@theme inline {
	--color-border-gray: #e1e1e1;
	--color-border-blue: #2f72e2;
	--color-bg-light-gray: #ebedf0;
	--color-bg-gray: #d9dce1;
	--color-icon-orange: #f59d0e;
	--color-icon-light-gray: #9da4b2;
	--color-icon-gray: #8c93a1;
	--color-destroy: #ef494f;
	--color-text-black: #1a1a1a;
	--color-text-gray: #677289;
}

* {
	box-sizing: border-box;
}

